# webpack5-wasm-pack

./: .editorconfig  .gitignore  Cargo.toml  index.js  package-lock.json  package.json  webpack.config.js
src/: lib.rs
